[project]
name = "aioffmpeg-ext"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aioffmpeg",
]

[tool.uv.sources]
aioffmpeg = { git = "https://github.com/nrvai/aioffmpeg" }

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ruff>=0.14.10",
]
